Lot of fixes, of width for text overflow in all views (mobile, desktop and 1col), also add functionality to svg reads.. Just IOS is missing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,7 +80,6 @@ body {
     fill: white;
 }
 
-
 /*Search bar*/
 
 .header__search {
@@ -425,7 +424,7 @@ body {
 
 .main__ul-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
     gap: 24px;
 }
 
@@ -465,9 +464,10 @@ body {
     height: 100%;
     object-fit: cover;
 }
-/*Info container*/
-    
+
+/*Info container*/    
 .main__info-container {
+    grid-template-columns: 1fr 1fr auto;
     display: grid;
     grid-template-areas:
     'title title play'
@@ -482,26 +482,38 @@ body {
     overflow: hidden;
 }
 
-
-
-
 /*Game title and play icons*/
 
 .main__title-game {
     grid-area: title;
     justify-self: start;
-    height: 31px;
     width: 100%;
-    text-align: start;
+    height: 31px;
     font-size: 23px;
     font-weight: 800;
     line-height: 31px;
+}
+
+.main__title-game p {
+    text-align: start;
+    width: 100%;
+    white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
 
 .main__play-icons {
     grid-area: play;
+    justify-self: end;
+}
+
+/*Svgs*/
+.main__play-icons svg:nth-child(n) {
+    margin-left: 5px;
+}
+
+.main__play-icons svg:nth-child(n+4) {
+    display: none;
 }
 
 /* Date and Genre */
@@ -514,10 +526,7 @@ body {
 .main__card-genre {
     grid-area: genre;
     width: 186px;
-    overflow: hidden;
-    /* text-overflow: ellipsis; */
 }
-
 .main__hr {
     margin-top: 2.5px;
 }
@@ -566,6 +575,22 @@ body {
     color: #939393;
 }
 
+.main__text p:nth-child(2) {
+    text-align: end;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.main__card-genre .main__text p:nth-child(2) {
+    width: 130px;
+}
+
+.main__card-date .main__text p:nth-child(2) {
+    width: 110px;
+}
+
+
 /* Description */
 
 .main__card-description {
@@ -581,7 +606,9 @@ body {
 }
 
 .main__card-description p {
-    flex: 583px 0 1;
+    text-align: justify;
+    height: 77px;
+    overflow: hidden;
 }
 
 /*Grid row gap*/
@@ -604,9 +631,9 @@ body {
     height: 315px;
 }
 .main__ul-grid--display .main__info-container {
-    grid-template-columns: auto 40px auto 40px auto 147px auto;
+    grid-template-columns: auto 1fr auto 1fr auto 2.5fr auto;
     grid-template-areas:
-    'title . . . . . play'
+    'title title title title . play play'
     'date . genre . number . gift'
     'description description description description description description description';
     row-gap: 13px;
@@ -620,7 +647,6 @@ body {
 
 .main__ul-grid--display .main__card-description {
     display: block;
-    
 }
 
 .main__ul-grid--display .main__card-date,
@@ -628,18 +654,28 @@ body {
     width: 155px;
 }
 
+.main__ul-grid--display .main__title-game p {
+    width: 450px;
+}
+
 .main__ul-grid--display .main__text p:nth-child(2) {
     color: white;
 }
 
-.main__ul-grid--display .main__card-genre,
-.main__ul-grid--display .main__card-date,
-.main__ul-grid--display .main__card-date {
-    align-self: end;
+.main__ul-grid--display .main__card-date .main__text p:nth-child(2) {
+    width: 78px;
+}
+
+.main__ul-grid--display .main__card-genre .main__text p:nth-child(2) {
+    width: 105px;
 }
 
 .main__ul-grid--display .--margin-row {
     margin-top: 0;
+}
+
+.main__ul-grid--display .main__play-icons svg:nth-child(n+4) {
+    display: flex;
 }
 
 /* --- STATES --- */
@@ -781,7 +817,7 @@ body {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 764px) {
     .header__line,
     .header__photo,
     .header__search,
@@ -798,19 +834,20 @@ body {
         padding-left: 0;
         padding-right: 0;
     }
-    .main__title {
-        height: auto;
-        width: 100%;
-        line-height: 49.5px;
-        font-size: 45px;
-        padding-left: 40px;
-    }
+    .main__title,
     .main__subtitle {
         width: 100%;
         height: auto;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .main__title {
+        line-height: 49.5px;
+        font-size: 45px;
+    }
+    .main__subtitle {
         line-height: 24.5px;
         margin-top: 25px;
-        padding-left: 40px;
     }
     .header {
         height: 104px;
@@ -869,16 +906,17 @@ body {
     }
 
     .main__info-container {
-        grid-template-columns: 1fr auto 1fr;
+        grid-template-columns: auto 1fr auto 1fr auto;
         grid-template-areas:
-        'title . .'
-        'date date date'
-        'genre genre genre'
-        'play number gift';
+        'title title title title title'
+        'date date date date date'
+        'genre genre genre genre genre'
+        'play . number . gift';
         row-gap: 6.5px;
         padding-top: 10px;
     }
 
+    .main__title-game p,
     .main__card-date,
     .main__card-genre {
         width: 100%;
@@ -886,10 +924,6 @@ body {
 
     .main__play-icons {
         justify-self: start;
-    }
-
-    .main__number {
-        margin-left: 6.5px;
     }
 
     .--margin-row {
@@ -903,11 +937,30 @@ body {
     .--date-mobile {
         margin-top: 3.5px;
     }
+
+    .main__card-date .main__text p:nth-child(2) {
+        width: 200px;
+    }
+    .main__card-genre .main__text p:nth-child(2) {
+        width: 220px;
+    }
+
+    .main__play-icons {
+        margin-left: -3px;
+    }
+
+    .main__number {
+        justify-self: center;
+    }
+
+    .main__play-icons svg:nth-child(n+4) {
+        display: flex;
+    }
 }
 
 /* Stop responsiveness*/
 
-@media (max-width: 320px) {
+@media (max-width: 330px) {
     .wrapper {
         display: none;
     }
